# unplugd

./: .gitignore  .pre-commit-config.yaml  PROJECT.md  README.md  pyproject.toml  samconfig.toml  template.yaml
_reference/: README.md  app.py  dvc.yaml  requirements.txt
_reference/.dvc/: config
_reference/config/: default.yaml
_reference/models/: .gitignore  checkpoints.dvc  unet_best.pt.dvc
_reference/src/: evaluate.py  train.py
containers/demucs/: Dockerfile  entrypoint.py
containers/shared/: progress.py
containers/whisper/: Dockerfile  entrypoint.py
docs/: PROJECT.md  PROJECT_PLAN.md
events/: s3_upload.json  send_progress.json  upload_request.json  ws_connect.json  ws_disconnect.json
functions/cleanup/: handler.py
functions/completion/: handler.py
functions/delete_song/: handler.py
functions/failure_handler/: handler.py
functions/get_presets/: handler.py
functions/get_song/: handler.py
functions/list_songs/: handler.py
functions/notify/: handler.py
functions/process_upload/: handler.py
functions/send_progress/: handler.py
functions/shared/: __init__.py  constants.py  dynamodb_utils.py  error_handling.py  jwt_utils.py  response.py  s3_utils.py  websocket.py
functions/upload_request/: handler.py
functions/ws_connect/: handler.py
functions/ws_default/: handler.py
functions/ws_disconnect/: handler.py
layers/common/: requirements.txt
statemachines/: processing.asl.json
templates/: api.yaml  auth.yaml  ecs.yaml  monitoring.yaml  orchestration.yaml  storage.yaml  vpc.yaml  websocket.yaml
tests/: conftest.py
(+33 files in other folders)
