[project]
name = "unplugd"
version = "0.1.0"
description = "Serverless AWS karaoke backend — upload songs, separate stems, extract synced lyrics"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3,dynamodb,sqs,stepfunctions,cognitoidp]>=5.0",
    "boto3>=1.34",
    "boto3-stubs[s3,dynamodb,sqs,stepfunctions,lambda,ecs,cognito-idp,apigatewaymanagementapi]",
    "ruff>=0.4",
    "mypy>=1.10",
    "mutagen>=1.47",
    "python-ulid>=2.0",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["_reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
